# CPP_Refresher

./: .gitignore  01_cpp_reactivation_tooling.md  02_memory_model_ub_aliasing_lifetimes.md  03_caching_locality_core_allocation.md  04_templates_constexpr_concepts.md  05_concurrency_parallelism.md  06_compilers101_practitioners.md  phase1_outline.md
labs/m01_reactivation/: CMakeLists.txt  README.md
labs/m01_reactivation/src/: bench_copy_move.cpp
labs/m02_memory_ub/: CMakeLists.txt  README.md
labs/m02_memory_ub/src/: aliasing_bench.cpp  atomic_order_demo.cpp
labs/m03_locality/: CMakeLists.txt  README.md
labs/m03_locality/src/: aos_soa_bench.cpp  false_sharing_bench.cpp
labs/m04_metaprogramming/: CMakeLists.txt  README.md
labs/m04_metaprogramming/src/: concept_dispatch_bench.cpp  crtp_vs_virtual_bench.cpp
labs/m05_concurrency/: CMakeLists.txt  README.md
labs/m05_concurrency/src/: counters_contention.cpp  spsc_ring_bench.cpp
labs/m06_compilers/: CMakeLists.txt
labs/m06_compilers/src/: fastmath_demo.cpp  kernel_ir.cpp
